# GOIT_WEB_dz9

./: beautyful_soup_scraping.py  create.py  hw.py  main.py  models.py  pyproject.toml  seed.py
