[tool.poetry]
name = "hw-9-python-web"
version = "0.1.0"
description = ""
authors = ["ArleKinG44 <denpolet@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_9_python_web"}]

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^5.1.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
sqlalchemy = "^2.0.19"
mongoengine = "^0.28.2"
scrapy = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
